--- a/part0/0.4.md
+++ b/part0/0.4.md
@@ -6,7 +6,7 @@
 
     Browser->>Server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
     activate Server
-    Note right of Server: Server adds the note from body <br> of the request to an array of notes
+    Note right of Server: Server adds the note from the body <br> of the request to an array of notes
     Server-->>Browser: HTTP status code 302
     Note left of Browser: Browser reloads the page
     deactivate Server
